# JavelinProt

./: README.md  __init__.py  config.yaml  pyproject.toml  requirements.txt  run.sh  runs2024-10-230
pkmodel/: Model2.py  __init__.py  example.py  main.py  model.py  protocol.py  protocol2.py  solution.py  test.py  utils.py
pkmodel/tests/: test_utils.py
runs/: 2024-10-230  2024-10-231  2024-10-240  2024-10-241
runs/2024-10-242/: stdout.txt
runs/2024-10-2511/: stdout.txt
runs/2024-10-259/: stdout.txt
tests/: __init__.py  test_model.py  test_protocol.py  test_solution.py  test_utils.py
